--- a/csscheatsheet/css/style.css
+++ b/csscheatsheet/css/style.css
@@ -1,3 +1,15 @@
+/* *{}  betyr alle elementer
+Hvis jeg f.eks vil fjerne all default padding og margin for alle elementer
+kan jeg legge det her
+
+
+*{
+    margin: 0;
+    padding: 0;
+}
+*/
+
+
 body{
     background-color: #f4f4f4;
     color: #555555;
@@ -22,6 +34,41 @@ body{
     margin: auto; /*Dette gjelder avstand fra kantene til rammen*/
 }
 
+.button{
+    background-color: #333;
+    color: #ffffff;
+    padding: 10px 15px;
+    border:none;
+}
+
+.button:hover{
+    background: red;
+    color: white;
+}
+
+a{
+    /*Global styling på linkene*/
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover{
+    color: red;
+}
+
+a:active{
+    /*Flasher litt når man hovrer over*/
+    color: green;
+}
+
+a:visited{
+    color:tomato;
+}
+
+.clr{
+    clear: both;
+}
+
 .box-1{
     background-color: #333333;
     color: #ffffff;
@@ -31,5 +78,141 @@ body{
     border-bottom: 5px red solid;
 
     padding-top: 20px; /*Dette gjelder avstand inne i rammen*/
+
+    padding: 20px;
+
+    /*Margin gjelder utenfor rammen
+    gir her 20px top and bottom og 0px right and left*/
+    margin: 20px 0;
      
+}
+
+/*.box-1 h1 betyr at dette gjelder alle h1 i .box-1 klassen*/
+.box-1 h1{
+    font-family: Tahoma;
+    font-weight: 800;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
+}
+
+.box-2
+{
+    border: 3px dotted #ccc;
+    padding: 20px;
+    margin: 20px 0
+}
+
+.categories{
+    border: 1px #ccc solid;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.categories ul{
+    padding-left: 20px;
+    list-style: square;
+}
+
+.categories li{
+    padding-bottom: 8px;
+    border-bottom: dotted 1px #333;
+    /*list-style-image: url('../images/index.png'); FIKS DENNE SENERE*/
+}
+
+.my-form{
+    padding: 20px;
+}
+
+.my-form.form-group{
+    padding-bottom: 15px;
+}
+
+.my-form label{
+    display: block;
+}
+
+.my-form input[type="text"], .my-form textarea{
+    padding: 8px;
+    width: 100%;
+}
+
+.block{
+    float: left;
+    width: 33.3%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#main-block{
+    float: left;
+    width: 70%;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+#sidebar{
+    float: right;
+    width: 30%;
+    background-color: #333;
+    color: white;
+    padding: 15px;
+    box-sizing: border-box;
+
+}
+
+.positioning-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid #000;
+    margin-top: 30px;
+    position: relative;
+    background-image: url(../images/bgimage.jpeg);
+    background-repeat: no-repeat;
+    background-position: 100px 200px;
+    background-position: center center;
+
+}
+
+.positioning-box h1{
+    /*position-box over her har postion: relative
+    her som vi tar for h1 elementer spesifikt vil disse forsvinne helt i toppen dersom vi setter position: absolute
+    uten å ha position relative over
+    Dette fordi position: absolute da vil ta utgangspunkt i toppen av siden og ikke i elementet den er ment å være i
+    Denne flytter altså h1 rundt i boksen*/
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
+
+.positioning-box h2{
+    position: absolute;
+    right: 50px;
+    bottom: 40px;
+}
+
+.fix-me{
+    /*Denne sørger for at knappen står på samme sted selv ved scrolling*/
+    position: fixed;
+    top: 400px;
+}
+
+.myList li:first-child{
+    background: red;
+
+}
+
+.myList li:last-child{
+    background: blue;
+}
+
+.myList li:nth-child(5){
+    background: yellow;
+}
+
+.myList li:nth-child(even){
+    background: grey;
 }
